--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "mysql2": "^3.11.4"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.4",
+    "node-cron": "^3.0.3"
   }
 }
